# ai_engineering

./: .gitignore
00_notes/exercises/: checkpoint_01.md
01_deep_learning_applications/: README.md
01_deep_learning_applications/01_transformers_from_scratch/: partial_transformer_scratch.ipynb
01_deep_learning_applications/04_llms/: llm-fine-tuning.ipynb  references.md  understanding_bert.ipynb
01_deep_learning_applications/05_anomaly_detection/: dl-for-anomaly-detection.ipynb
01_deep_learning_applications/06_dl_for_timeseries/: temporal_fusion_transformers.ipynb
01_deep_learning_applications/07_ml_with_c++/: helpers.h  main.cpp
01_deep_learning_applications/07_ml_with_c++/simple_dl_model/project/: CMakeLists.txt  main.cpp
01_transformers_from_scratch/: partial_transformer_torch.ipynb
01_transformers_from_scratch/d2l_attention_mechanisms_transformers/: 01_queries_keys_values.ipynb  02_attention_pooling_by_similarity.ipynb  03_attention_scoring_functions.ipynb
02-genai-llms-for-nlp/01-nlp-intro/: README.md
02-genai-llms-for-nlp/02-workspace-management/: README.md
02-genai-llms-for-nlp/03-llms-nlp-transformers/: README.md
02_genAI_llms_for_nlp/00_notes/: 01_basic_nlp_concepts.md
02_genAI_llms_for_nlp/01_basics/: text-generation-gpt2large.ipynb
02_sentiment_classification_with_transformers/: nlp-for-classification-wdl.ipynb  nlp_for_classification.ipynb
03_classification_wCNNs/: classification-wcnns.ipynb
04_llms/: llm-fine-tuning.ipynb  llms_understanding.ipynb  understanding_bert.ipynb
99_extras/: 01_embeddings_from_scratch.ipynb
(+44 files in other folders)
